  - Fix Message::Passing::Input::FileTail to not die if the tail process
    is killed for any reason. It is instead re-spawned.. RT#78851

0.100
  - Port the dist to Moo, so that the core of Message::Passing
    uses no XS code. Components can still be written using full
    Moose, as Moo supports upgrading classes to full Moose classes.

    Note however that this implies the following changes to custom scripts:

    - Scripts should use MooX::Options instead of MooseX::Getopt,
      attributes will need to be updated to use the 'option' keyword
      rather than 'has'.

    - Message::Passing::Role::CLIComponent is now built on top of
      Package::Variant rather than MooseX::Role::Parameterized,
      and so scripts should now import it and use the function
      provided to generate roles.

  - Add UDP socket Input and Output, allowing transit of arbitrary
    UDP packets.

  - Add Travis continuous integration to the project.

0.010
  - Doc fix in Message::Passing::Manual::Cookbook
    https://github.com/suretec/Message-Passing/pull/2

  - Add Crypt::CBC encoder and decoder.

  - Add Gzip and Bzip2 encoders and decoders.

0.009
  - Add Message::Passing::Manual::Components.

  - Add SYNOPSIS to Message::Passing::Role::Filter.

  - Additional documentation in Message::Passing::Manual.

  - Refactor building connection managers so less duplicate code
    is needed in components.

  - Make STDIN input saner.

  - Add an 'error chain' concept, allowing components to have a
    way of reporting connection (or other) issues out of band
    with the message stream.
    This defaults to STDERR, however can be overridden per component,
    or for a whole chain.

  - Add error_log() function to the DSL for setting the error chain up
    for a whole chain.

  - Use the error chain in Message::Passing::Role::ConnectionManager
    to output errors when connections disconnect / timeout / reconnect.

  - Cleanups to Message::Passing::Input::FileTail to not leak processes